--- a/main.yaml
+++ b/main.yaml
@@ -3,6 +3,17 @@
   gather_facts: false
 
   tasks:
-  - name: Pre-tasks before configuration
-    ansible.builtin.include_tasks:
-      file: "pre-tasks/pull_oci_instance_key.yaml"
+    - name: Pre-tasks before configuration
+      ansible.builtin.include_tasks:
+        file: "pre-tasks/pull_oci_instance_key.yaml"
+
+
+- hosts: apigban
+  remote_user: "{{ user.remote.name }}"
+
+  tasks:
+    - name: Include variables
+      ansible.builtin.include_vars: tasks/vars.yaml
+    - name: say hello
+      debug:
+        msg: Hello from {{ hello_message }}
