--- a/inventory/group_vars/all.yaml
+++ b/inventory/group_vars/all.yaml
@@ -5,3 +5,25 @@ user:
   remote:
     name: ubuntu
     ansible_ssh_private_key_file: secrets/oci.privkey
+
+default:
+  apt_pkgs:
+    - python3-pip
+    - python3-setuptools
+    - git
+    - apt-transport-https
+    - ca-certificates
+    - curl
+    - wget
+    - vim
+    - gnupg-agent
+    - software-properties-common
+    - mosh
+    - pydf
+    - mtr
+    - htop
+    - iftop
+    - net-tools  
+    - nmap
+    - iperf
+    - python3-sshtunnel
